[package]
name = "my_project"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { version = "2.4.0", features = [], default-features = false }

[dev-dependencies]
odra-test = { version = "2.4.0", features = [], default-features = false }

[build-dependencies]
odra-build = { version = "2.4.0", features = [], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.4.0", features = [], default-features = false }
odra-cli = { version = "2.4.0", features = [], default-features = false }
odra-types = { version = "0.7.1", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
log = { version = "0.4", default-features = false }

[[bin]]
name = "my_project_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "my_project_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "my_project_cli"
path = "bin/cli.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
casper-types = { git = "https://github.com/casper-network/casper-node", rev = "991a42d" }
